# spoyt

./: .gitignore  README.md  pyproject.toml  requirements.txt
Spoyt/: .env.example  __main__.py  embeds.py  exceptions.py  settings.py  utils.py
Spoyt/api/: spotify.py  youtube.py
